<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recall</string>
    
    <string name="menu_option_delete">Delete</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_share">Share</string>
    <string name="menu_option_send">Send</string>
    <string name="menu_option_mic">Record</string>
    <string name="menu_option_micoff">Stop Recording</string>
    
    <string name="phonecalls_fragment_name">Phone calls</string>
	<string name="settings_activity_name">Settings</string>
	
	<string name="phonecall_private_number">Private number</string>
	<string name="phonecall_allowed_through">Allowed through on third retry</string>
	<string name="phonecall_default_date">0 minutes ago</string>
	<string name="phonecall_default_duration">0:25</string>
	<string name="phonecall_content_description">Phonecall</string>
    
	<string name="phonecall_recording_unsupported">This device doesn\'t support phone call recording.</string>
	<string name="phonecall_recording_use_mic">Unfortunately this is a hardware limitation and outside the control of this app. Recording will use the mic which may only capture half the call unless it\'s put on speaker.</string>
	
    <string name="pref_phonecall_category">Automatic recording</string>
    <string name="pref_phonecall_record_all_title">Always record</string>
    <string name="pref_phonecall_record_all_summary">Record all incoming and outgoing calls</string>
    <string name="pref_phonecall_record_unknown_title">Unknown contact</string>
    <string name="pref_phonecall_record_unknown_summary">Record calls with numbers not listed in contacts</string>
    <string name="pref_phonecall_record_private_title">Private numbers</string>
    <string name="pref_phonecall_record_private_summary">Record calls from private numbers and hidden callers</string>
    
    <string name="pref_trigger_category">Gestures</string>
    <string name="pref_trigger_gesture_title">Shake to record</string>
    <string name="pref_trigger_gesture_summary">Shake phone to toggle recording while ringing or during any call</string>
    
    <string name="pref_notification_category">Notifications</string>
    <string name="pref_notification_recorded_title">Recorded call</string>
    <string name="pref_notification_recorded_summary">Show notification with details after call has been recorded</string>
    
    <string name="msg_blocked_call">Blocked call</string>
    <string name="msg_blocked_incoming_call">Blocked incoming call from private number</string>
    <string name="msg_list_is_empty">There are no recorded phone calls yet.</string>
    <string name="msg_action_send">Send using</string>
    
    <string name="msg_recording_phonecall">Recording call</string>
    <string name="msg_recorded_phonecall">Recorded call</string>
    <string name="msg_recorded_phonecall_from">With %s</string>
    <string name="msg_recorded_phonecall_from_private_number">From private number</string>
</resources>